ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src
include_HEADERS=include/libelf++.h
include_libelf__dir = $(includedir)/libelf++
include_libelf___HEADERS=include/libelf++/ElfProgramHeader.h \
                         include/libelf++/ElfSegment.h \
                         include/libelf++/ElfSymbolTable.h \
                         include/libelf++/ElfImage.h \
                         include/libelf++/ElfSection.h \
                         include/libelf++/ElfDynamicInfo.h \
                         include/libelf++/ElfSymbol.h
